Release Note

* 2/13/2015
  * changed AtlasPJB to send scouts to sites associated to T1 SE
  * changed reacivatePendingTasks to finish tasks when they have some finished files 
  * changed CF to allow 200k files

* 2/11/2015
  * changed AtlasPJB to include nDefined in nQueued
  * added bulkSendMsg to MsgWrapper
  * changed AtlasAJB to send brokerage logs
  * removed setReplicaMetaDataAttribute from AtlasTS
  * added soft finish
  * fixed insertFiles to take largeness of nEventsPerFile into account

* 2/10/2015
  * modified MW to escape <>
  * removed data locality check from AtlasPJB
  * fixed JG to set correct coreCount for pmerge
  * changed AtlasPJB to count jobs in all clouds
  * fixed getTasksToBeProcessed for zero SEQ_NUMBER

* 2/6/2015
  * added submitting messages to JG

* 2/5/2015
  * fixed typo in AtlasPPP 

* 2/4/2015
  * using long to get LB info
  * fixed InputChunk for nFilesPerMergeJob

* 2/3/2015
  * removed slow lookup in insertFiles
  * adding originPandaID to jobName

* 2/2/2015
  * added mergeCoreCount
  * changed AtlasDDM to use Rucio API for dataset registration

* 2/1/2015
  * fixed reuse of libTgz

* 1/30/2015
  * fixed reactivatePending to limit length of errorDialog

* 1/29/2015
  * fixed RW calculation to take effective size into account

* 1/27/2015
  * removed ND-specific handling for release check in AtlasJobBrokerages
  * fixed AtlasJobBrokerages to take nStarting into account

* 1/26/2015
  * changed InputChunk to recalculate weight once the site is chosen

* 1/24/2015
  * fixed CF so that retried child is not done before the parent re-opens output

* 1/22/2015
  * improved SQL in duplicateFilesForReuse 

* 1/20/2015
  * using max when calculating memory requirements based on scouts
  * fixed getTobeProcessed for secondary with nFilesTobeUsed=nFilesUsed

* 1/15/2015
  * added reuseSecOnDemand
  * changed TR to treat JEDITemporaryError as a temporary error

* 1/14/2015