@@ -693,6 +693,9 @@ class JobGeneratorThread (WorkerThread):
                     jobSpec.currentPriority  = jobSpec.assignedPriority
                     jobSpec.lockedby         = 'jedi'
                     jobSpec.workQueue_ID     = taskSpec.workQueue_ID
+                    # disable reassign
+                    if taskSpec.disableReassign():
+                        jobSpec.relocationFlag = 2
                     # using grouping with boundaryID
                     useBoundary = taskSpec.useGroupWithBoundaryID()
                     boundaryID = None
